--- a/app/src/main/res/layout/activity_identify.xml
+++ b/app/src/main/res/layout/activity_identify.xml
@@ -27,6 +27,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <View
+        android:id="@+id/viewBackgroundOfMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        android:layout_marginTop="0dp"
+        android:alpha="0"
+        android:background="#FF9800"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewMessage"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:alpha="0"
+        android:gravity="center"
+        android:textSize="32dp"
+        android:textColor="@color/white"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/viewBackgroundOfMessage"
+        app:layout_constraintEnd_toEndOf="@+id/viewBackgroundOfMessage"
+        app:layout_constraintStart_toStartOf="@+id/viewBackgroundOfMessage"
+        app:layout_constraintTop_toTopOf="@+id/viewBackgroundOfMessage" />
+
     <ImageView
         android:id="@+id/imageMe"
         android:layout_width="60dp"
