--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -6,24 +6,36 @@
     android:layout_height="match_parent"
     tools:context=".ResultActivity">
 
-    <TextView
-        android:id="@+id/txtTitle"
+    <LinearLayout
+        android:id="@+id/viewTitle"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:gravity="center"
-        android:text="Identify Result"
+        android:layout_height="70dp"
+        android:orientation="horizontal"
+        android:background="@color/colorPrimary"
+        app:layout_constraintTop_toTopOf="parent"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent">
-    </TextView>
+        >
+
+        <TextView
+            android:id="@+id/txtTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:layout_marginStart="110dp"
+            android:layout_marginEnd="50dp"
+            android:gravity="center"
+            android:textSize="24dp"
+            android:text="Identify Result"
+            android:textColor="@color/purple_200" />
+    </LinearLayout>
 
     <LinearLayout
         android:id="@+id/lytImages"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/txtTitle"
+        android:layout_marginTop="-500dp"
+        app:layout_constraintTop_toBottomOf="@+id/viewTitle"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         >
@@ -31,8 +43,7 @@
         <ImageView
             android:id="@+id/imageEnrolled"
             android:layout_width="150dp"
-            android:layout_height="150dp">
-        </ImageView>
+            android:layout_height="150dp"></ImageView>
 
         <ImageView
             android:id="@+id/imageIdentified"
@@ -55,7 +66,7 @@
         >
 
         <TextView
-            android:text="Enrolled"
+            android:text="Registered User"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -63,7 +74,7 @@
         </TextView>
 
         <TextView
-            android:text="Identified"
+            android:text="Identified User"
             android:layout_width="160dp"
             android:layout_height="wrap_content"
             android:gravity="center"
