--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -1,6 +1,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="70dp" >
+    android:layout_height="70dp"
+    style="@style/parent.contentLayout1">
 
     <ImageView
         android:id="@+id/faceView"
